--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-// Copyright by Orhan Akgün
-// Date: 10.Januar.2025
+/* Copyright by Orhan Akgün */
+/* HS-ESSLINGEN IOT PROJECT BABYFOODCONTROL */
+/* Date: 10.Januar.2025 */
 <!DOCTYPE html>
 <html lang="de">
 <head>
