--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-/* Copyright by Orhan Akgün */
-/* HS-ESSLINGEN IOT PROJECT BABYFOODCONTROL */
-/* Date: 10.Januar.2025 */
 <!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BABYFOODCONTROL</title>
+    <!-- 
+    COPYRIGHT BY ORHAN AKGÜN
+    HS-ESSLINGEN IOT PROJECT BABYFOODCONTROL
+    DATE: 10. JANUAR 2025 
+    -->
     <style>
         /* Allgemeine Formatierungen für die Seite */
         body {
